<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pregunta1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/trivia"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:text="@string/Question3"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/opcion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/opcion7"

        />
    <CheckBox
        android:id="@+id/opcion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/opcion8"

        />
    <CheckBox
        android:id="@+id/opcion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/opcion9"

        />
    <Button
        android:id="@+id/go_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/LightGreen"
        android:textColor="@color/black"
        android:text="@string/following"
        android:textSize="20sp"


        />


</LinearLayout>